# ChangeLog for dev-db/jxtray
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/jxtray/ChangeLog,v 1.5 2005/03/04 14:24:40 luckyduck Exp $

  04 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> jxtray-0.5.ebuild:
  depend on xml-commons readded

  04 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> jxtray-0.5.ebuild:
  fixed a typo which broke postgresql support and changed xml-commons dependency
  to xerces-2 dependency to fix #82561

  03 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> jxtray-0.5.ebuild:
  updated to reflect the new jdom slots

*jxtray-0.5 (23 Dec 2004)

  23 Dec 2004; Karl Trygve Kalleberg <karltk@gentoo.org> jxtray-0.5.ebuild:
  Initial import. Ebuild submitted by our very own Saleem 
  A(too-long-a-name-anyway) <compnerd@compnerd.org>. Fixes #74247.