@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/jxtray
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/jxtray/ChangeLog,v 1.5 2005/03/04 14:24:40 luckyduck Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/jxtray/ChangeLog,v 1.6 2005/05/14 21:57:14 luckyduck Exp $
+
+  14 May 2005; Jan Brinkmann <luckyduck@gentoo.org> jxtray-0.5.ebuild:
+  stable on amd64 and x86, added ~ppc to KEYWORDS
 
   04 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> jxtray-0.5.ebuild:
   depend on xml-commons readded
